fix: table body not aligned with scrollbar (issue #2)

--- a/style.css
+++ b/style.css
@@ -90,12 +90,12 @@ button:hover {
 }
 
 #table-container {
+    margin-top: 10px;
     max-height: 200px;
     overflow-y: auto;
 }
 
 table {
-    margin-top: 20px;
     border-collapse: collapse;
     width: 100%;
     max-width: 800px;
